styles/globals.css
@import "~tachyons/css/tachyons.css";
/* @import "bootstrap/dist/css/bootstrap.css"; */
@import "./bootstrap/css/bootstrap.min.css";
@import "./variables.css";
@import "./textEditor.css";

@font-face {
  font-family: "AbrilFatFace";
  src: url(/fonts/abrilfatface/AbrilFatface-Regular.ttf) format("truetype");
}

@font-face {
  font-family: "Lato";
  src: url(/fonts/lato/Lato-Regular.ttf);
}

@font-face {
  font-family: "Lato";
  src: url(/fonts/lato/Lato-Italic.ttf);
  font-style: italic;
}

@font-face {
  font-family: "Lato";
  src: url(/fonts/lato/Lato-Bold.ttf);
  font-weight: bold;
}

html,
body {
  margin: 0;
  font-family: Lato, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
  color: var(--body-c);
  background-color: var(--bg-medium-c);
  overflow-x: hidden;
  min-height: 100vh;
}

h1,
h2,
h3 {
  font-family: AbrilFatFace;
  font-weight: normal;
}

h2,
h3 {
  letter-spacing: 0.05ch;
  line-height: var(--lh-s);
}

#page-container {
  display: grid;
  grid-template-rows: auto 1fr auto;
  justify-items: center;
  min-height: 100vh;
}

#page-container > * {
  width: 100vw;
}

#nav-container {
  background-color: var(--bg-light-c);
  padding-bottom: var(--space-xs);
}

#nav-container > div,
#hero-container > div,
#main-content,
footer {
  max-width: var(--page-w);
  margin-left: auto;
  margin-right: auto;
  padding: var(--space-0) var(--space-m) var(--space-0) var(--space-m);
}

#main-content {
  margin: var(--space-m) auto;
}

a {
  color: var(--link-c);
  text-decoration: none;
}

a:hover {
  color: var(--link-c);
  text-decoration: underline;
  text-decoration-thickness: var(--border-s);
  text-decoration-color: var(--body-c);
  text-underline-offset: .1em;
}

a:focus {
  color: var(--link-c);
  outline: none;
  text-decoration: underline;
  text-decoration-thickness: var(--border-m);
  text-decoration-color: var(--headline-c);
  text-underline-offset: .1em;
}

a.pill {
  color: var(--body-c);
  background-color: var(--bg-light-c);
  border-radius: 9999px;
  padding: var(--space-xs) var(--space-s);
}

a.pill:focus {
  text-decoration: none;
}

a.pill.pill--inverse {
  color: var(--bg-light-c);
  background-color: var(--headline-c);
}

a.pill.pill--inverse:hover,
a.pill.pill--inverse:focus {
  text-decoration-color: var(--bg-light-c);
}

a.pill.pill--inverse:focus {
  box-shadow: 0px 0px 0px var(--border-s) var(--bg-light-c);
  -webkit-box-shadow: 0px 0px 0px var(--border-s) var(--bg-light-c);
  -moz-box-shadow: 0px 0px 0px var(--border-s) var(--bg-light-c);
}

button,
input {
  color: inherit;
  background-color: transparent;
  border-radius: 9999px;
  border: 0.125rem solid var(--border-c);
  padding: 0.5rem;
}

a.pill:focus,
button:focus,
input:focus,
textarea:focus {
  outline: none;
  box-shadow: 0px 0px 0px var(--border-s) var(--headline-c);
  -webkit-box-shadow: 0px 0px 0px var(--border-s) var(--headline-c);
  -moz-box-shadow: 0px 0px 0px var(--border-s) var(--headline-c);
}

* {
  box-sizing: border-box;
}

.all-caps {
  text-transform: uppercase;
}

.visually-hidden {
  clip: rect(0 0 0 0);
  clip-path: inset(50%);
  height: 1px;
  overflow: hidden;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

